# BSU

./: CMakeLists.txt  calculator.cpp  calculator.h
Kollok/: app.py
Lab1/: CMakeLists.txt  Creator.cpp  Employee.h  Main.cpp  Reporter.cpp
Lab2/Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  Main.cpp
Lab4/: CMakeLists.txt  Receiver.cpp  Sender.cpp
Lab5/: CMakeLists.txt  Client.cpp  Server.cpp
